[tool.poetry]
name = "translate-hands"
version = "0.1.0"
description = "This is a simple web app that translates sign language into English characters"
authors = ["Douglas Bunker <douglas.bunker@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
torch = "^1.13.1+cu117"
opencv-python = "^4.7.0.68"
numpy = "^1.24.1"
onnx = "^1.13.0"
onnxruntime = "^1.13.1"
streamlit = "^1.17.0"
streamlit-camera-input-live = "^0.2.0"
torchvision = "^0.14.1+cu117"
mediapipe = "^0.9.1.0"


[[tool.poetry.source]]
name = "torch117"
url = "https://download.pytorch.org/whl/cu117"
default = false
secondary = true


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
