[tool.poetry]
name = "asl-translate"
version = "0.1.0"
description = "This is a simple web app that translates sign language into English characters"
authors = ["Douglas Bunker <douglas.bunker@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
opencv-python = "^4.7.0.68"
numpy = "^1.24.1"
onnx = "^1.13.0"
onnxruntime = "^1.13.1"
streamlit = "^1.17.0"
streamlit-camera-input-live = "^0.2.0"
mediapipe = "^0.9.1.0"
pillow = "^9.4.0"


[[tool.poetry.source]]
name = "torch117"
url = "https://download.pytorch.org/whl/cu117"
default = false
secondary = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.0.4"

[tool.poetry.group.cuda]
optional = true

[tool.poetry.group.cuda.dependencies]
torchvision = "^0.14.1+cu117"

[tool.poetry.group.cpu]
optional = true

[tool.poetry.group.cpu.dependencies]
torchvision = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
